feat(lungo,age-wf): add docs endpoint
